--- a/openfoam-study.yaml
+++ b/openfoam-study.yaml
@@ -65,9 +65,10 @@ study:
       description: Combine the outputs of the previous step
       run:
         cmd: |
-            echo $(MERLIN_PATHS_ALL)
             echo $(MERLIN_PATHS_ALL) > out
             echo $(run-openfoam-ico.workspace)
+
+            $(MERLIN_PATH)/python $(SPECROOT)/scripts/combine-outputs.py -data $(run-openfoam-ico.workspace)
         task_queue: simulation_queue
         depends: [run-openfoam-ico*]
 
