--- a/openfoam-study.yaml
+++ b/openfoam-study.yaml
@@ -19,8 +19,8 @@ study:
         cmd: |
             $(MERLIN_PATH)/pip install -r $(SPECROOT)/requirements.txt
 
-            #rm ~/.merlin/app.yaml
-            #cp $(SPECROOT)/app.yaml ~/.merlin/app.yaml
+            rm ~/.merlin/app.yaml
+            cp $(SPECROOT)/app.yaml ~/.merlin/app.yaml
         task_queue: simulation_queue
 
     - name: copy-cavity
