--- a/openfoam-study.yaml
+++ b/openfoam-study.yaml
@@ -36,12 +36,16 @@ study:
       run:
         cmd: |
             cp -r $(copy-cavity.workspace)/cavity cavity/
+            cd cavity
+
+            sed -i '' "18s/.*/nu              [0 2 -1 0 0 0 0] $(VISCOSITY);/" constant/transportProperties
+            sed -i '' "26s/.*/        value           uniform ($(LID_SPEED) 0 0);/" 0/U
+
+            cd ..
             cp $(SPECROOT)/scripts/run-openfoam .
 
             CONTAINER_NAME='OPENFOAM_ICO_$(MERLIN_SAMPLE_ID)'
-
-            docker container run -ti --rm -v $(pwd):/cavity -w /cavity --name=${CONTAINER_NAME} cfdengine/openfoam ./run-openfoam $(LID_SPEED) $(VISCOSITY)
-
+            docker container run -ti --rm -v $(pwd):/cavity -w /cavity --name=${CONTAINER_NAME} cfdengine/openfoam ./run-openfoam $(LID_SPEED)
             docker wait ${CONTAINER_NAME}
         task_queue: simulation_queue
         depends: [copy-cavity]
