--- a/openfoam-study.yaml
+++ b/openfoam-study.yaml
@@ -4,11 +4,9 @@ description:
 
 env:
     variables:
-        WORKSPACE_HOME: /Users/mubarka1/march-tutorial
-        OUTPUT_PATH: $(WORKSPACE_HOME)/running-simulation-output
-        MERLIN_PATH: $(WORKSPACE_HOME)/merlin_venv/bin
+        OUTPUT_PATH: ../running-simulation-output
 
-        N_SAMPLES: 10
+        N_SAMPLES: 4
 
 study:
     - name: setup
@@ -17,7 +15,7 @@ study:
                 to the merlin info directory
       run:
         cmd: |
-            $(MERLIN_PATH)/pip install -r $(SPECROOT)/requirements.txt
+            pip install -r $(SPECROOT)/requirements.txt
 
             mkdir $(MERLIN_INFO)/running_yaml
             cp $(MERLIN_INFO)/*.yaml $(MERLIN_INFO)/running_yaml
@@ -28,7 +26,7 @@ study:
       description: Copying the cavity directory from docker container
       run:
         cmd: |
-            source $(MERLIN_INFO)/scripts/cavity-setup.sh $(MERLIN_PATH) $(MERLIN_INFO)
+            source $(MERLIN_INFO)/scripts/cavity-setup.sh $(MERLIN_INFO)
         task_queue: simulation_queue
         depends: [setup]
 
@@ -55,7 +53,7 @@ study:
       description: Combine the outputs of the previous step
       run:
         cmd: |
-            $(MERLIN_PATH)/python $(MERLIN_INFO)/scripts/combine-outputs.py -data $(run-openfoam-ico.workspace) -merlin_paths $(MERLIN_PATHS_ALL)
+            python $(MERLIN_INFO)/scripts/combine-outputs.py -data $(run-openfoam-ico.workspace) -merlin_paths $(MERLIN_PATHS_ALL)
         task_queue: simulation_queue
         depends: [run-openfoam-ico_*]
 
@@ -63,7 +61,7 @@ study:
       description: Learning the output of the openfoam simulations using input parameters
       run:
         cmd: |
-            $(MERLIN_PATH)/python $(MERLIN_INFO)/scripts/learn.py -specroot $(MERLIN_WORKSPACE)
+            python $(MERLIN_INFO)/scripts/learn.py -specroot $(MERLIN_WORKSPACE)
         task_queue: simulation_queue
         depends: [combine-outputs]
 
@@ -76,7 +74,7 @@ merlin:
                 args: -l INFO --concurrency 10 --prefetch-multiplier 1 -Ofair
     samples:
         generate:
-             cmd: $(MERLIN_PATH)/python $(SPECROOT)/scripts/make-samples.py -n $(N_SAMPLES) -outfile=$(MERLIN_INFO)/samples
+             cmd: python $(SPECROOT)/scripts/make-samples.py -n $(N_SAMPLES) -outfile=$(MERLIN_INFO)/samples
         file: $(MERLIN_INFO)/samples.npy
         column_labels: [LID_SPEED, VISCOSITY]
         level_max_dirs: 25
