--- a/openfoam-study.yaml
+++ b/openfoam-study.yaml
@@ -1,18 +1,20 @@
 description:
     name: openfoam-parameter-study
-    description: A parameter study that includes initializing, running, post-processing, collecting, and vizualizing runs
+    description: |
+      A parameter study that includes initializing, running,
+      post-processing, collecting, learning and vizualizing runs
 
 env:
     variables:
         OUTPUT_PATH: ../running-simulation-output
 
-        N_SAMPLES: 4
+        N_SAMPLES: 10
 
 study:
     - name: setup
       description: |
                 Installing necessary python packages and copying files from SPECROOT
-                to the merlin info directory
+                to the merlin_info directory
       run:
         cmd: |
             pip install -r $(SPECROOT)/requirements.txt
@@ -20,21 +22,23 @@ study:
             mkdir $(MERLIN_INFO)/running_yaml
             cp $(MERLIN_INFO)/*.yaml $(MERLIN_INFO)/running_yaml
             cp -r $(SPECROOT)/* $(MERLIN_INFO)/
-        task_queue: simulation_queue
+        task_queue: setupworkers
 
     - name: copy-cavity
       description: Copying the cavity directory from docker container
       run:
         cmd: |
             source $(MERLIN_INFO)/scripts/cavity-setup.sh $(MERLIN_INFO)
-        task_queue: simulation_queue
+        task_queue: setupworkers
         depends: [setup]
 
-    - name: run-openfoam-ico
-      description: Runs OpenFOAM using the icoFoam solver
+    - name: sim-runs
+      description: |
+                  Edits the Lidspeed and viscosity then runs OpenFOAM simulation
+                  using the icoFoam solver
       run:
         cmd: |
-            cp -r $(copy-cavity.workspace)/cavity cavity/
+            cp -r $(MERLIN_INFO)/cavity cavity/
             cd cavity
 
             sed -i '' "18s/.*/nu              [0 2 -1 0 0 0 0] $(VISCOSITY);/" constant/transportProperties
@@ -46,23 +50,23 @@ study:
             CONTAINER_NAME='OPENFOAM_ICO_$(MERLIN_SAMPLE_ID)'
             docker container run -ti --rm -v $(pwd):/cavity -w /cavity --name=${CONTAINER_NAME} cfdengine/openfoam ./run-openfoam $(LID_SPEED)
             docker wait ${CONTAINER_NAME}
-        task_queue: simulation_queue
+        task_queue: simworkers
         depends: [copy-cavity]
 
     - name: combine-outputs
       description: Combine the outputs of the previous step
       run:
         cmd: |
-            python $(MERLIN_INFO)/scripts/combine-outputs.py -data $(run-openfoam-ico.workspace) -merlin_paths $(MERLIN_PATHS_ALL)
-        task_queue: simulation_queue
-        depends: [run-openfoam-ico_*]
+            python $(MERLIN_INFO)/scripts/combine-outputs.py -data $(sim-runs.workspace) -merlin_paths $(MERLIN_PATHS_ALL)
+        task_queue: learnworkers
+        depends: [sim-runs_*]
 
     - name: learn
       description: Learning the output of the openfoam simulations using input parameters
       run:
         cmd: |
             python $(MERLIN_INFO)/scripts/learn.py -specroot $(MERLIN_WORKSPACE)
-        task_queue: simulation_queue
+        task_queue: learnworkers
         depends: [combine-outputs]
 
 merlin:
@@ -70,8 +74,15 @@ merlin:
         task_server: celery
         overlap: False
         workers:
-            all:
-                args: -l INFO --concurrency 10 --prefetch-multiplier 1 -Ofair
+            setupworkers:
+              args: -l INFO --concurrency 2
+              steps: [setup, copy-cavity]
+            simworkers:
+              args: -l INFO --concurrency 10 --prefetch-multiplier 1 -Ofair
+              steps: [sim-runs]
+            learnworkers:
+              args: -l INFO --concurrency 1
+              steps: [combine-outputs, learn]
     samples:
         generate:
              cmd: python $(SPECROOT)/scripts/make-samples.py -n $(N_SAMPLES) -outfile=$(MERLIN_INFO)/samples
